# proteinnetpy

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.py
docs/: requirements.txt
docs/source/: conf.py  data.rst  index.rst  maths.rst  modules.rst  mutation.rst  parser.rst  proteinnetpy.rst  proteinnetpy.scripts.rst  record.rst  scripts.rst  tfdataset.rst
proteinnetpy/: __init__.py  add_angles.py  data.py  datasets.py  maps.py  maths.py  mutation.py  parser.py  record.py  tfdataset.py
proteinnetpy/scripts/: add_angles.py  filter_proteinnet.py  to_fasta.py
scripts/: analyse_mutations.py
test/: test_data
